# pocket-bridge

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.fleet/: run.json
.github/workflows/: main.yml
app/: common.py  feed.py  main.py  reader.py  settings.py
app/routers/: atom.py  read.py  rss.py
nginx/: .unit.conf.json
